<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context=".ResultsToevoegenActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/setCourseCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/setResult"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/result"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/setResultDate"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:hint="@string/result_date"
            android:inputType="datetime"
            android:textSize="12sp" />


        <Button
            android:id="@+id/btnInsertScore"
            android:layout_width="match_parent"
            android:background="#000"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:text="@string/add_result" />

    </LinearLayout>

</LinearLayout>
