<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScoreCCTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvScoreCCTag"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tvScoreCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScoreResultTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvScoreResultTag"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tvScoreResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScoreResultDateTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvScoreResultDateTag"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tvScoreResultDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScoreStudentNrTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvScoreStudentNrTag"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tvScoreStudentNr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScoreTitleTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvScoreTitleTag"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tvScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

</LinearLayout>
