<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.myprofile.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0">

            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/gieterij"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:src="@drawable/studenten"/>

                <Button
                    android:id="@+id/btnStudenten"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:background="#000"
                    android:textColor="#fff"
                    android:text="@string/studenten"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/student"/>

                <Button
                    android:id="@+id/btnStudent"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:background="#000"
                    android:textColor="#fff"
                    android:layout_weight="2"
                    android:text="@string/student"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/results"/>

                <Button
                    android:id="@+id/btnResults"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#000"
                    android:textColor="#fff"
                    android:text="@string/results"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/dier"/>

                <Button
                    android:id="@+id/btnDier"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#000"
                    android:textColor="#fff"
                    android:text="@string/dier"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:src="@drawable/rvt"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>