<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.myprofile.MijnInfoActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gieterij" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/header_cover_image"
            android:background=" #9ec9ef">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/mijnfoto" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="Naam"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="70dp"
                android:text="Locatie"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/klas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="100dp"
                android:text="Klas"
                android:textColor="#fff"
                android:textSize="16sp" />
        </RelativeLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/profile_layout"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/tagDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="@string/dob"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagEdu" />

            <TextView
                android:id="@+id/tagBirthplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="@string/birthplace"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagDOB" />

            <TextView
                android:id="@+id/tagCrebo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/crebo"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagStudentnr" />

            <TextView
                android:id="@+id/tagStudentnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:text="@string/stdnr"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagGender" />

            <TextView
                android:id="@+id/tagGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"

                android:clickable="true"
                android:text="@string/gender"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagMobile" />

            <TextView
                android:id="@+id/tagEdu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="@string/edu"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="[opleiding]"
                app:layout_constraintLeft_toRightOf="@+id/tagEdu"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/crebo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="[crebo]"
                app:layout_constraintLeft_toRightOf="@+id/tagCrebo"
                app:layout_constraintTop_toBottomOf="@+id/studentnr" />

            <TextView
                android:id="@+id/studentnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="[Student nr]"
                app:layout_constraintLeft_toRightOf="@+id/tagStudentnr"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="[Male]"
                app:layout_constraintLeft_toRightOf="@+id/tagGender"
                app:layout_constraintTop_toBottomOf="@+id/mobileNumber" />

            <TextView
                android:id="@+id/birthplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="[Geboorteplaats]"
                app:layout_constraintLeft_toRightOf="@+id/tagBirthplace"
                app:layout_constraintTop_toBottomOf="@+id/tagDOB" />

            <TextView
                android:id="@+id/mobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="0614692457"
                app:layout_constraintLeft_toRightOf="@+id/tagMobile"
                app:layout_constraintTop_toBottomOf="@+id/birthplace" />

            <TextView
                android:id="@+id/animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="[dier]"
                app:layout_constraintLeft_toRightOf="@+id/tagAnimal"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:text="psatheeskumar01@student.rocvantwente.nl"
                app:layout_constraintLeft_toRightOf="@+id/tagEmail"
                app:layout_constraintTop_toBottomOf="@+id/crebo" />

            <TextView
                android:id="@+id/tagAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:clickable="true"

                android:text="@string/animalprofile"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagEmail" />

            <TextView
                android:id="@+id/tagEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/mail"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagCrebo" />

            <TextView
                android:id="@+id/tagMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/mobile"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagBirthplace" />

            <TextView
                android:id="@+id/DOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="[GeboorteDatum]"
                app:layout_constraintLeft_toRightOf="@+id/tagDOB"
                app:layout_constraintTop_toBottomOf="@+id/tagEdu" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</ScrollView>
